plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '0.4.7'
}

group 'ch.christofbuechi'
version '1.0-SNAPSHOT'

sourceCompatibility = 12
targetCompatibility = 12

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

compileJava {
    options.compilerArgs += ["--enable-preview"]
}
test {
    jvmArgs '--enable-preview'
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version '2019.1'
}
patchPluginXml {
    changeNotes """
      Add change notes here.<br>
      <em>most HTML tags may be used</em>"""
}
